# bass-karaoke-player

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GHCR_SETUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.in  requirements-dev.txt  requirements-docker.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  copilot-setup-steps.yml  release.yml  smoke.yml
backend/: requirements-dev.txt  requirements.txt
backend/app/: __init__.py  audio_processor.py  main.py  models.py  storage.py
backend/tests/: __init__.py  test_api.py  test_audio_processor.py  test_models.py  test_storage.py
docs/: caching.md
e2e/: conftest.py  test_api.py  test_offline.py  test_ui.py
e2e/fixtures/: generate_mp3.py  generate_wav.py
e2e/media/: README.md
frontend/: .npmrc  app.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
frontend/legacy/: app.js  style.css
frontend/lit/: index.html  styles.css
frontend/lit/components/: bkp-app.js  bkp-equalizer.js  bkp-player.js  bkp-song-list.js  bkp-stem-card.js  bkp-upload.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx  sw.ts
frontend/src/api/: client.ts
frontend/src/audio/: audioCache.ts  engine.ts
frontend/src/components/: BottomNav.tsx  Equalizer.tsx  GlobalControls.tsx  MiniPlayer.tsx  PlaybackBar.tsx  PlayerSection.tsx  SongList.tsx  StemCard.tsx  StemsStack.tsx  UploadSection.tsx  VersionsPicker.tsx
frontend/src/hooks/: useOnlineStatus.ts
frontend/src/store/: playerStore.ts
frontend/src/test/: setup.ts
frontend/src/test/components/: App.test.tsx  BottomNav.test.tsx  Equalizer.test.tsx  GlobalControls.test.tsx  MiniPlayer.test.tsx  PlaybackBar.test.tsx  PlayerSection.test.tsx  SongList.test.tsx  StemCard.test.tsx  StemsStack.test.tsx  UploadSection.test.tsx  VersionsPicker.test.tsx
frontend/src/test/unit/: audioCache.test.ts  client.test.ts  engine.test.ts  playerStore.test.ts  songDisplay.test.ts  songSort.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: songDisplay.ts  songSort.ts
