[project]
name = "bass-karaoke-player"
version = "0.1.0"
description = "A web-based karaoke/music player with stem splitting, pitch/tempo control"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "bass-karaoke-player contributors" }]
keywords = ["music", "karaoke", "stems", "demucs", "rubberband"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "python-multipart==0.0.22",
    "aiofiles==25.1.0",
    "pydantic==2.12.5",
    "demucs==4.0.1",
]

[project.optional-dependencies]
# GPU-accelerated audio decoding – only needed in the Docker runtime image.
# torchcodec requires CUDA libs provided by nvidia-npp on Linux.
gpu = [
    "torchcodec==0.11.0",
    "nvidia-npp==13.1.0.44",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "ruff==0.15.8",
    "mypy==1.20.0",
    "types-aiofiles==25.1.0.20251011",
    "playwright==1.58.0",
    "pytest-playwright==0.7.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "--cov=backend/app --cov-report=term-missing --cov-report=xml --cov-fail-under=95"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
